--- a/frontend/src/app/components/marketplace/marketplace.component.scss
+++ b/frontend/src/app/components/marketplace/marketplace.component.scss
@@ -73,6 +73,7 @@
                 width: 400px;
                 border-bottom: 100px solid var(--bs-primary);
                 border-left: 100px solid transparent;
+                border-radius: 0px 8px 8px 0px;
                 height: 100px;
                 color: #FFF;
             }
