--- a/frontend/src/app/components/map/map.component.scss
+++ b/frontend/src/app/components/map/map.component.scss
@@ -1,79 +1,33 @@
+:host {
+    height: 100%;
+}
+
 .map {
     display: flex;
     flex-direction: column;
-    height: 100vh;
-    padding: 10px;
-    background-image: url('/flag.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    padding: 16px;
+    height: 100%;
 
-    h1 {
-        color: #FFF;
-        font-size: 36px;
-        // font-weight: 700;
+    &__header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 16px;
     }
 
     &__container {
         flex: 1;
         display: flex;
         flex-direction: column;
-        margin: 16px;
         overflow: hidden;
-
-        .btn-group {
-            background-color: #FFF;
-            border-radius: 0px;
-
-            .btn {
-                border-radius: 0px;
-            }
-        }
     }
 
     &__frame {
         border: 1px solid var(--bs-primary);
-        border-top: 0px;
         height: 100%;
-        background-color: #FFF;
-        overflow: auto;
     }
 
     #map {
         height: 100%;
-    }
-
-    &__list {
-        display: flex;
-        flex-direction: column;
-
-        &__item {
-            display: flex;
-            align-items: center;
-            gap: 16px;
-            padding: 10px;
-            height: 125px;
-            font-size: 14px;
-            
-
-            &--dark {
-                background-color: #d3d3d3;
-            }
-    
-            img {
-                width: 75px;
-            }
-
-            &__content {
-                display: flex;
-                flex-direction: column;
-                gap: 8px;
-            }
-
-            &__title {
-                font-weight: 700;
-                font-size: 16px;
-            }
-        }
     }
 }
