--- a/frontend/src/app/shared/components/market-nav/market-nav.component.html
+++ b/frontend/src/app/shared/components/market-nav/market-nav.component.html
@@ -1,6 +1,8 @@
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar navbar-expand-lg market-nav">
     <div class="container-fluid">
-        <app-logo [size]="40" [fontSize]="24" [imgClass]="'mb-2'"></app-logo>
+        <div class="market-nav__logo" routerLink="/">
+            <app-logo [size]="40" [fontSize]="24" imgClass="mb-2"></app-logo>
+        </div>
         
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
