--- a/frontend/src/app/components/home/home.component.scss
+++ b/frontend/src/app/components/home/home.component.scss
@@ -84,16 +84,25 @@
         background-color: #000;
         color: #FFF;
 
-        &-person {
+        .row {
+            display: flex;
+            justify-content: space-evenly;
+            align-items: baseline;
+        }
+
+        &__person {
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            text-align: center;
+
+            div {
+                font-size: 13px;
+                font-weight: 400;
+            }
 
             img {
-                width: 75px;
-                margin-bottom: 8px;
+                border-radius: 8px;
             }
         }
     }
