--- a/frontend/src/app/components/marketplace/marketplace.component.html
+++ b/frontend/src/app/components/marketplace/marketplace.component.html
@@ -19,8 +19,10 @@
       <select class="form-select" id="sortSelect" [(ngModel)]="sortOption" (change)="onFiltersChange()" name="sortOption">
         <option value="priceAsc">Price: Low to High &uarr;</option>
         <option value="priceDesc">Price: High to Low &darr;</option>
-        <option value="distanceAsc">Distance: Low to High &uarr;</option>
-        <option value="distanceDesc">Distance: High to Low &darr;</option>
+        @if (postalCode) {
+          <option value="distanceAsc">Distance: Low to High &uarr;</option>
+          <option value="distanceDesc">Distance: High to Low &darr;</option>
+        }
       </select>
     </div>
   </div>
@@ -147,60 +149,60 @@
     </div>
 
     <div class="marketplace__list">
-      @for (producer of filteredProducers; track producer.id) {
-        <div class="marketplace__list__item" (click)="onProducerClick(producer.id)">
-
-          <div class="marketplace__list__item__image">
-            <img [src]="producer.logo_url" alt="Producer image"> 
-          </div>
-
-          <div>
-            <h2 class="m-0">
-              {{ producer.name }}
-            </h2>
-
-            <div *ngIf="producer.distance" class="mt-3">
-              <i class="bi bi-geo-alt"></i>
-              {{ producer.distance }} km
-            </div>
-          </div>
-
-          <div class="marketplace__list__item__info ms-auto">
-            @if (contractType === 'PPA') {
-              <div class="marketplace__list__item__trapezoid marketplace__list__item__trapezoid--ppa">
-                <div class="marketplace__list__item__price fs-5">
-                  <div class="poppins-light-italic">
-                    Starting offer :
-                  </div>
-                  <div class="poppins-medium fs-5">
-                    {{ producer.dollars_per_kg }} $/kg
-                  </div>
-                  <div class="poppins-light fs-5">
-                    Contract: {{ producer.contract_duration }} years
-                  </div>
-                </div>
-              </div>
-            } @else {
-              <div class="marketplace__list__item__trapezoid marketplace__list__item__trapezoid--dp">
-                <div class="marketplace__list__item__price fs-5">
-                  <div class="fs-4">
-                    {{ producer.dollars_per_kg }} $/kg
-                  </div>
-                  <div class="poppins-light">
-                    Available volume: {{ producer.available_kg }} kg
-                  </div>
-                </div>
-              </div>
-            }
-          </div>
-          
+      @if (loading) {
+        <div class="marketplace__list__item marketplace__list__item--loading">
+          <h2>Loading...</h2>
         </div>
-      } @empty {
-        @if (loading) {
-          <div class="marketplace__list__item marketplace__list__item--loading">
-            <h2>Loading...</h2>
+      } @else {
+        @for (producer of filteredProducers; track producer.id) {
+          <div class="marketplace__list__item" (click)="onProducerClick(producer.id)">
+  
+            <div class="marketplace__list__item__image">
+              <img [src]="producer.logo_url" alt="Producer image"> 
+            </div>
+  
+            <div>
+              <h2 class="m-0">
+                {{ producer.name }}
+              </h2>
+  
+              <div *ngIf="producer.distance" class="mt-3">
+                <i class="bi bi-geo-alt"></i>
+                {{ producer.distance }} km
+              </div>
+            </div>
+  
+            <div class="marketplace__list__item__info ms-auto">
+              @if (contractType === 'PPA') {
+                <div class="marketplace__list__item__trapezoid marketplace__list__item__trapezoid--ppa">
+                  <div class="marketplace__list__item__price fs-5">
+                    <div class="poppins-light-italic">
+                      Starting offer :
+                    </div>
+                    <div class="poppins-medium fs-5">
+                      {{ producer.dollars_per_kg }} $/kg
+                    </div>
+                    <div class="poppins-light fs-5">
+                      Contract: {{ producer.contract_duration }} years
+                    </div>
+                  </div>
+                </div>
+              } @else {
+                <div class="marketplace__list__item__trapezoid marketplace__list__item__trapezoid--dp">
+                  <div class="marketplace__list__item__price fs-5">
+                    <div class="fs-4">
+                      {{ producer.dollars_per_kg }} $/kg
+                    </div>
+                    <div class="poppins-light">
+                      Available volume: {{ producer.available_kg }} kg
+                    </div>
+                  </div>
+                </div>
+              }
+            </div>
+            
           </div>
-        } @else if (filteredProducers.length === 0) {
+        } @empty {
           <div class="marketplace__list__item marketplace__list__item--loading">
             <h2>No producers found</h2>
           </div>
