--- a/frontend/src/app/components/marketplace/marketplace.component.scss
+++ b/frontend/src/app/components/marketplace/marketplace.component.scss
@@ -53,6 +53,7 @@
         display: flex;
         flex-direction: column;
         gap: 16px;
+        padding-bottom: 16px;
 
         &__item {
             display: flex;
