Create producers and update map

--- a/frontend/src/app/components/marketplace/marketplace.component.html
+++ b/frontend/src/app/components/marketplace/marketplace.component.html
@@ -158,7 +158,7 @@
           <div class="marketplace__list__item" (click)="onProducerClick(producer.id)">
   
             <div class="marketplace__list__item__image">
-              <img [src]="producer.logo_url" alt="Producer image"> 
+              <img [src]="producer.logo_url" alt="Producer logo"> 
             </div>
   
             <div>
