--- a/frontend/src/app/components/marketplace/marketplace.component.scss
+++ b/frontend/src/app/components/marketplace/marketplace.component.scss
@@ -85,6 +85,7 @@
                 img {
                     height: 100%;
                     width: auto;
+                    border-radius: 8px;
                 }
             }
 
